--- a/all/templates/all/target.html
+++ b/all/templates/all/target.html
@@ -3,87 +3,124 @@
 {% block content %}
 {% load static from staticfiles %}
 
-<div class="page-header">
-<h1>Targets <small>Some text</small></h1>
+<div class="page-header" id="rigid">
+<h1>Targets</h1>
 </div>
 
-<a href="#rigid">Rigid</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#medium">Medium</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#difficult">Difficult</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="{% url 'search' %}">Back to search</a>
+<a href="#rigid" class="rigid_link">Rigid</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#medium" class="medium_link">Medium</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#difficult" class="difficult_link">Difficult</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="{% url 'search' %}" class="home">Back to search</a><br><br>
 
-<h2>Rigid targets</h2>
+<h2><span class="rigid_title">Rigid targets</span></h2>
 <table class="table">
 <tr>
-<th><div data-ot="PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">PDB ID</div></th>
-<th><div data-ot="Category tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Category</div></th>
-<th><div data-ot="Receptor PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Receptor PDB ID</div></th>
-<th><div data-ot="Ligand PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Ligand PDB ID</div></th>
-<th><div data-ot="Receptor description" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Receptor description</div></th>
-<th><div data-ot="Ligand description" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Ligand description</div></th>
+<th><div class="pdb_id">PDB ID</div></th>
+<th><div class="category">Category</div></th>
+<th><div class="rec_pdb_id">Receptor PDB ID</div></th>
+<th><div class="lig_pdb_id">Ligand PDB ID</div></th>
+<th><div class="rec_description">Receptor description</div></th>
+<th><div class="lig_description">Ligand description</div></th>
+<th><div class="i_rmsd_target">I-RMSD</div></th>
+<th><div class="dasa">DASA</div></th>
+<th></th>
 <th></th>
 </tr>
 {% for complex in Rigid %}
 	<tr>
-	<td style="width: 100px"><a href="{{ pdb_url }}{{ complex.name }}" target="_blank">{{ complex.name }}</a></td>
-	<td>{{ complex.category}}</td>
-	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.receptor }}" target="_blank">{{ complex.receptor }}</a></td>
-	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.ligand }}" target="_blank">{{ complex.ligand }}</a></td>	
-	<td>{{ complex.receptor_description }}</td>
-	<td>{{ complex.ligand_description }}</td>
-	<td style="width: 100px"><a href="{% url 'target_info' complex.name %}">View target</a></td>
+	<td style="width: 100px"><a href="{{ pdb_url }}{{ complex.name }}" target="_blank"><div class="pdb_id">{{ complex.name }}</div></a></td>
+	<td><div class="category">{{ complex.category}}</div></td>
+	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.receptor }}" target="_blank"><div class="rec_pdb_id">{{ complex.receptor }}</div></a></td>
+	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.ligand }}" target="_blank"><div class="lig_pdb_id">{{ complex.ligand }}</div></a></td>	
+	<td><div class="rec_description">{{ complex.receptor_description }}</div></td>
+	<td><div class="lig_description">{{ complex.ligand_description }}</div></td>
+	<td><div class="i_rmsd_target">{{ complex.i_rmsd }}</div></td>
+	<td><div class="dasa"></div></td>
+	<td class="view_info" style="width: 100px"><a href="{% url 'target_info' complex.name %}">View info</a></td>
+	<td class="view_models" style="width: 100px"><a href="{% url 'target_models' complex.name 'All' 'All' 0 0 0 0 %}">View models</a></td>
 	</tr>
-{% endfor %}</table>
-<a id="medium" href="#">Back to top</a>
+{% endfor %}
+</table>
+<a id="medium" href="#" class="top">Back to top</a>
 
-<h2>Medium targets</h2>
+<h2><span class="medium_title">Medium targets</span></h2>
 <table class="table">
 <tr>
-<th><div data-ot="PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">PDB ID</div></th>
-<th><div data-ot="Category tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Category</div></th>
-<th><div data-ot="Receptor PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Receptor PDB ID</div></th>
-<th><div data-ot="Ligand PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Ligand PDB ID</div></th>
-<th><div data-ot="Receptor description" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Receptor description</div></th>
-<th><div data-ot="Ligand description" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Ligand description</div></th>
+<th><div class="pdb_id">PDB ID</div></th>
+<th><div class="category">Category</div></th>
+<th><div class="rec_pdb_id">Receptor PDB ID</div></th>
+<th><div class="lig_pdb_id">Ligand PDB ID</div></th>
+<th><div class="rec_description">Receptor description</div></th>
+<th><div class="lig_description">Ligand description</div></th>
+<th><div class="i_rmsd_target">I-RMSD</div></th>
+<th><div class="dasa">DASA</div></th>
+<th></th>
 <th></th>
 </tr>
 {% for complex in Medium %}
         <tr>
-	<td style="width: 100px"><a href="{{ pdb_url }}{{ complex.name }}" target="_blank">{{ complex.name }}</a></td>
-	<td>{{ complex.category}}</td>
-	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.receptor }}" target="_blank">{{ complex.receptor }}</a></td>
-	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.ligand }}" target="_blank">{{ complex.ligand }}</a></td>	
-	<td>{{ complex.receptor_description }}</td>
-	<td>{{ complex.ligand_description }}</td>
-	<td style="width: 100px"><a href="{% url 'target_info' complex.name %}">View target</a></td>
+	<td style="width: 100px"><a href="{{ pdb_url }}{{ complex.name }}" target="_blank"><div class="pdb_id">{{ complex.name }}</div></a></td>
+	<td><div class="category">{{ complex.category}}</div></td>
+	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.receptor }}" target="_blank"><div class="rec_pdb_id">{{ complex.receptor }}</div></a></td>
+	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.ligand }}" target="_blank"><div class="lig_pdb_id">{{ complex.ligand }}</div></a></td>	
+	<td><div class="rec_description">{{ complex.receptor_description }}</div></td>
+	<td><div class="lig_description">{{ complex.ligand_description }}</div></td>
+	<td><div class="i_rmsd_target">{{ complex.i_rmsd }}</div></td>
+	<td><div class="dasa"></div></td>
+	<td class="view_info" style="width: 100px"><a href="{% url 'target_info' complex.name %}">View info</a></td>
+	<td class="view_models" style="width: 100px"><a href="{% url 'target_models' complex.name 'All' 'All' 0 0 0 0 %}">View models</a></td>
 	</tr>
-{% endfor %}</table>
-<a id="difficult" href="#">Back to top</a>
+{% endfor %}
+</table>
+<a id="difficult" href="#" class="top">Back to top</a>
 
-<h2>Difficult targets</h2>
+<h2><span class="difficult_title">Difficult targets</span></h2>
 <table class="table">
 <tr>
-<th><div data-ot="PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">PDB ID</div></th>
-<th><div data-ot="Category tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Category</div></th>
-<th><div data-ot="Receptor PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Receptor PDB ID</div></th>
-<th><div data-ot="Ligand PDB ID tooltip" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Ligand PDB ID</div></th>
-<th><div data-ot="Receptor description" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Receptor description</div></th>
-<th><div data-ot="Ligand description" data-ot-target=true data-ot-style="dark" data-ot-stem="false">Ligand description</div></th>
+<th><div class="pdb_id">PDB ID</div></th>
+<th><div class="category">Category</div></th>
+<th><div class="rec_pdb_id">Receptor PDB ID</div></th>
+<th><div class="lig_pdb_id">Ligand PDB ID</div></th>
+<th><div class="rec_description">Receptor description</div></th>
+<th><div class="lig_description">Ligand description</div></th>
+<th><div class="i_rmsd_target">I-RMSD</div></th>
+<th><div class="dasa">DASA</div></th>
+<th></th>
 <th></th>
 </tr>
 {% for complex in Difficult %}
         <tr>
-	<td style="width: 100px"><a href="{{ pdb_url }}{{ complex.name }}" target="_blank">{{ complex.name }}</a></td>
-	<td>{{ complex.category}}</td>
-	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.receptor }}" target="_blank">{{ complex.receptor }}</a></td>
-	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.ligand }}" target="_blank">{{ complex.ligand }}</a></td>	
-	<td>{{ complex.receptor_description }}</td>
-	<td>{{ complex.ligand_description }}</td>
-	<td style="width: 100px"><a href="{% url 'target_info' complex.name %}">View target</a></td>
+	<td style="width: 100px"><a href="{{ pdb_url }}{{ complex.name }}" target="_blank"><div class="pdb_id">{{ complex.name }}</div></a></td>
+	<td><div class="category">{{ complex.category}}</div></td>
+	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.receptor }}" target="_blank"><div class="rec_pdb_id">{{ complex.receptor }}</div></a></td>
+	<td style="width: 150px"><a href="{{ pdb_url }}{{ complex.ligand }}" target="_blank"><div class="lig_pdb_id">{{ complex.ligand }}</div></a></td>	
+	<td><div class="rec_description">{{ complex.receptor_description }}</div></td>
+	<td><div class="lig_description">{{ complex.ligand_description }}</div></td>
+	<td><div class="i_rmsd_target">{{ complex.i_rmsd }}</div></td>
+	<td><div class="dasa"></div></td>
+	<td class="view_info" style="width: 100px"><a href="{% url 'target_info' complex.name %}">View info</a></td>
+	<td class="view_models" style="width: 100px"><a href="{% url 'target_models' complex.name 'All' 'All' 0 0 0 0 %}">View models</a></td>
 	</tr>
 {% endfor %}
 </table>
 
-<a href="#">Back to top</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="{% url 'search' %}">Back to search</a>
+<a href="#" class="top">Back to top</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="{% url 'search' %}" class="home">Back to search</a>
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
