--- a/all/templates/all/target_models.html
+++ b/all/templates/all/target_models.html
@@ -1,3 +1,4 @@
+search
 {% extends 'all/base.html' %}{% block title %}{{ target.name }} Models{% endblock %}
 {% block content %}
 {% django_js jquery=false %}
@@ -13,25 +14,33 @@
 <thead>
 <tr>
 <th data-priority="critical" class="filter-false sorter-false th.selectmodel">Select</th>
+<th data-priority="1" class="th.number" data-placeholder="e.g. <=5">Method rank</th>
 <th data-priority="1" class="filter-select th.method.name">Method</th>
 <th data-priority="2" class="filter-select th.refinement.name">Refinement</th>
 <th data-priority="3" class="th.i_rmsd" data-placeholder="e.g. '<=8'">I-RMSD</th>
-<th data-priority="4" class="th.l_rmsd" data-placeholder="e.g. '<15'">L-RMSD</th>
-<th data-priority="5" class="th.r_rmsd" data-placeholder="e.g. '<4'">R-RMSD</th>
+<th data-priority="4" class="columnSelector-false th.l_rmsd" data-placeholder="e.g. '<15'">L-RMSD</th>
+<th data-priority="5" class="columnSelector-false th.r_rmsd" data-placeholder="e.g. '<4'">R-RMSD</th>
 <th data-priority="3" class="th.fnat" data-placeholder="e.g. '>0.5'">Fnat</th>
-<th data-priority="5" class="th.i_l_rmsd" data-placeholder="e.g. '<3.1'">I-L-RMSD</th>
+<th data-priority="3" class="sorter-capri_rank filter-select th.capri_rank">CAPRI Rank</th>
+<th data-priority="5" class="columnSelector-false th.dasa" data-placeholder="e.g. '<5000'">&#916;ASA</th>
+<th data-priority="5" class="columnSelector-false th.no_clashes" data-placeholder="e.g. '<60'">No. of clashes</th>
+<th data-priority="5" class="columnSelector-false th.i_l_rmsd" data-placeholder="e.g. '<3.1'">I-L-RMSD</th>
 </tr>
 </thead>
 <tbody>
 {% for model in results %}
 <tr class="bodytr" name="{{ model.id }}">
 <td class="td.modelcheckbox" style="width:40px"><center><input name="results/{{ model.method__name_lower }}/{{ model.refinement__name_lower }}/{{ model.target__difficulty_lower }}/{{ model.target__name }}/{{ model.target__name }}_{{ model.method__name_lower }}_{{ model.refinement__name_lower }}_{{ model.number }}.pdb-{{ model.target__receptor_bound_chain }}-fitted" class="modelcheckbox" type="checkbox"></center></td>
+<td class="td.number">{{ model.number }}</td>
 <td class="td.method.name" style='width:160px'>{{ model.method__name }}</td>
 <td class="td.refinement.name" style='width:135px'>{{ model.refinement__name }}</td>
 <td class="td.i_rmsd">{{ model.i_rmsd }}</td>
 <td class="td.l_rmsd">{{ model.l_rmsd }}</td>
 <td class="td.r_rmsd">{{ model.r_rmsd }}</td>
 <td class="td.fnat" style='width:100px'>{{ model.fnat }}</td>
+<td class="td.capri_rank">{{ model.capri_rank }}</td>
+<td class="td.dasa">{{ model.dasa }}</td>
+<td class="td.no_clashes">{{ model.no_clashes }}</td>
 <td class="td.i_l_rmsd">{{ model.i_l_rmsd }}</td>
 <td class="td.viewmodel" style='width:95px'><a href="{% url 'model' model.id %}">View model</a></td>
 </tr>
@@ -54,12 +63,14 @@
   </form>
 </div>
 <br>
+<!--
 <p>Download table as CSV file:</p>
 <form>
 <input type="radio" id="downloadcsv_all" name="downloadcsv" value="all" checked>Complete table
 <input type="radio" id="downloadcsv_onlyvisible" name="downloadcsv" value="onlyvisible">Only visible cells
 </form><br>
 <div id="downloadify"></div><br>
+-->
 <input type="submit" id="deselectmodels" value="Deselect all models"><br>
 <input type="submit" value="Update view" onclick="re_render();"><br>
 <a href="{% url 'search' %}">Back to search</a>
@@ -174,6 +185,7 @@ JSMol terminal:&nbsp;&nbsp;<input type="text" name="terminal" style="width: 300p
 <button onClick=reset_Jmol();>Reset</button></form><br>
 
 <script>
+/*
 $(document).ready(re_render());
 $(document).ready(function(){
     Downloadify.create('downloadify',{
@@ -214,6 +226,7 @@ $(document).ready(function(){
     },
     });
 });
+*/
 </script>
 
 {% endblock %}
