--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -6,7 +6,7 @@
 {% load static from staticfiles %}
 
 <!--jquery, used by bootstrap, highcharts, jsmol, tablesorter and opentip-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="{% static "jquery-1-8-2.min.js" %}"></script>
 
 <!--bootstrap-->
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
@@ -130,7 +130,7 @@ padding-top: 60px;
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Model<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <form method='POST'>{% csrf_token %}
-            <table class="table" style="width:500px;border-collapse:separate;border-spacing:10px">{{ form.as_table }}
+            <table id="model_search_dropdown" class="table" style="width:500px;border-collapse:separate;border-spacing:10px">{{ form.as_table }}
             <tr><td></td><td><input type="submit" value="Submit" /></td></tr></table></form>
           </ul>
         </li>
@@ -147,6 +147,21 @@ padding-top: 60px;
   </div>
 </nav>
 
+<!--script to disable/enable capri_rank checkboxes on the dropdown if the "All" category is selected-->
+<script>
+$('#model_search_dropdown [value="All_ranks"]').click(function(){
+	if(this.checked){
+		$('#model_search_dropdown [name="capri_rank"]').not('[value="All_ranks"]').attr('disabled','disabled');
+	}
+	else{
+		$('#model_search_dropdown [name="capri_rank"]').not('[value="All_ranks"]').removeAttr('disabled');
+	};
+});
+$(document).ready(function(){
+	$('#model_search_dropdown [value="All_ranks"]').prop('checked',true);
+	$('#model_search_dropdown [name="capri_rank"]').not('[value="All_ranks"]').attr('disabled','disabled');
+});
+</script>
 <!--script to stop dropdown collapsing on click of target select-->
 <script type="text/javascript">
     $('.dropdown-menu table, .dropdown-menu label').click(function(e) {
