--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -11,36 +11,36 @@
 <table id="model_select_table" class="tablesorter bootstrap-popup">
 <thead>
 <tr>
-<th data-priority="1" class="th.target.name" data-placeholder="e.g. '1ACB'">Target</th>
-<th data-priority="3" class="th.target.difficulty" data-placeholder="e.g. 'Rigid'">Difficulty</th>
-<th data-priority="2" class="th.method.name" data-placeholder="e.g. 'ZDOCK or Hex'">Method</th>
-<th data-priority="2" class="th.refinement.name" data-placeholder="e.g. '!Nothing'">Refinement</th>
-<th data-priority="1" class="th.i_rmsd" data-placeholder="e.g. '<=8'">I-RMSD</th>
-<th data-priority="4" class="columnSelector-false" data-placeholder="e.g. '<15'">L-RMSD</th>
-<th data-priority="4" class="columnSelector-false" data-placeholder="e.g. '<4'">R-RMSD</th>
-<th data-priority="3" class="th.fnat" data-placeholder="e.g. '>0.5'">Fnat</th>
-<th data-priority="5" class="columnSelector-false th.i_l_rmsd" data-placeholder="e.g. '<3.1'">I-L-RMSD</th>
-<th data-priority="6" class="columnSelector-false th.target.receptor" data-placeholder="e.g. '1BVL'">Receptor PDB ID</th>
-<th data-priority="6" class="columnSelector-false th.target.ligand" data-placeholder="e.g. '3LZT'">Ligand PDB ID</th>
+<th data-priority="1" class="th.target.name pdb_id" data-placeholder="e.g. '1ACB'">Target</th>
+<th data-priority="3" class="th.target.difficulty difficulty" data-placeholder="e.g. 'Rigid'">Difficulty</th>
+<th data-priority="2" class="th.method.name method" data-placeholder="e.g. 'ZDOCK or Hex'">Method</th>
+<th data-priority="2" class="th.refinement.name refinement" data-placeholder="e.g. '!Nothing'">Refinement</th>
+<th data-priority="1" class="th.i_rmsd i_rmsd_model" data-placeholder="e.g. '<=8'">I-RMSD</th>
+<th data-priority="4" class="columnSelector-false l_rmsd" data-placeholder="e.g. '<15'">L-RMSD</th>
+<th data-priority="4" class="columnSelector-false r_rmsd" data-placeholder="e.g. '<4'">R-RMSD</th>
+<th data-priority="3" class="th.fnat fnat" data-placeholder="e.g. '>0.5'">Fnat</th>
+<th data-priority="5" class="columnSelector-false th.i_l_rmsd l_i_rmsd" data-placeholder="e.g. '<3.1'">I-L-RMSD</th>
+<th data-priority="6" class="columnSelector-false th.target.receptor rec_pdb_id" data-placeholder="e.g. '1BVL'">Receptor PDB ID</th>
+<th data-priority="6" class="columnSelector-false th.target.ligand lig_pdb_id" data-placeholder="e.g. '3LZT'">Ligand PDB ID</th>
 </tr>
 
 </thead>
 <tbody>
 {% for model in results %}
-<tr class="bodytr">
-<td class="td.target.name"><a href="{% url 'target_info' model.target__name %}">{{ model.target__name }}</a></td>
-<td class="td.target.difficulty">{{ model.target__difficulty }}</td>
-<td class="td.method.name">{{ model.method__name }}</td>
-<td class="td.refinement.name" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;">{{ model.refinement__name }}</td>
-<td class="td.i_rmsd">{{ model.i_rmsd }}</td>
-<td class="td.l_rmsd">{{ model.l_rmsd }}</td>
-<td class="td.r_rmsd">{{ model.r_rmsd }}</td>
-<td class="td.fnat">{{ model.fnat }}</td>
-<td class="td.i_l_rmsd">{{ model.i_l_rmsd }}</td>
-<td class="td.target.receptor"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__receptor }}">{{ model.target__receptor }}</a></td>
-<td class="td.target.ligand"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__ligand }}">{{ model.target__ligand }}</a></td>
-<td class="td.viewmodel"><a href="{% url 'model' model.id %}">View model</a></td>
-<td class="td.viewallmodels" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;"><a href="{% url 'target_models' model.target__name 'All' 'All' 0 0 0 0 %}">View all models for {{model.target__name}}</a></td>
+<tr class="bodytr" onMouseOver="create_tooltip('{{ model.id }}','{{ model.target__name }}','{{ model.target__difficulty }}','{{ model.method__name }}','{{ model.refinement__name }}','{{ model.i_rmsd }}','{{ model.l_rmsd }}','{{ model.r_rmsd }}','{{ model.fnat }}','{{ model.i_l_rmsd }}','{{ model.target__receptor }}','{{ model.target__ligand }}');">
+<td class="td.target.name row_id_{{ model.id }}"><a href="{% url 'target_info' model.target__name %}">{{ model.target__name }}</a></td>
+<td class="td.target.difficulty row_id_{{ model.id }}">{{ model.target__difficulty }}</td>
+<td class="td.method.name row_id_{{ model.id }}">{{ model.method__name }}</td>
+<td class="td.refinement.name row_id_{{ model.id }}" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;">{{ model.refinement__name }}</td>
+<td class="td.i_rmsd row_id_{{ model.id }}">{{ model.i_rmsd }}</td>
+<td class="td.l_rmsd row_id_{{ model.id }}">{{ model.l_rmsd }}</td>
+<td class="td.r_rmsd row_id_{{ model.id }}">{{ model.r_rmsd }}</td>
+<td class="td.fnat row_id_{{ model.id }}">{{ model.fnat }}</td>
+<td class="td.i_l_rmsd row_id_{{ model.id }}">{{ model.i_l_rmsd }}</td>
+<td class="td.target.receptor row_id_{{ model.id }}"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__receptor }}">{{ model.target__receptor }}</a></td>
+<td class="td.target.ligand row_id_{{ model.id }}"><a target="_blank" href="http://www.rcsb.org/pdb/explore/explore.do?structureId={{ model.target__ligand }}">{{ model.target__ligand }}</a></td>
+<td class="td.viewmodel"><a href="{% url 'model' model.id %}" class="view_model">View model</a></td>
+<td class="td.viewallmodels" style="white-space: nowrap; overflow: hidden; text-overflow:ellipsis;"><a href="{% url 'target_models' model.target__name 'All' 'All' 0 0 0 0 %}" class="view_target">View all models for {{model.target__name}}</a></td>
 </tr>
 {% endfor %}
 </tbody>
@@ -140,6 +140,32 @@ $(document).ready(function(){
     },
     });
 });
+
+//if model id is not in list of tooltips already created, create the tooltip
+var opentip_formatting = { target:true, style:"dark", stem:"false", tipJoint:"top left", targetJoint:"bottom left" };
+var created_tooltip_list = [];
+
+function create_tooltip(model_id,target_name,target_difficulty,method_name,refinement_name,i_rmsd,l_rmsd,r_rmsd,fnat,i_l_rmsd,target_receptor,target_ligand) {
+if ($.inArray(model_id, created_tooltip_list) == -1) {
+	$(".row_id_"+model_id).each( function() {
+	var tooltip = new Opentip($(this), opentip_formatting);
+	var content = "<b>Model details</b><br><br>";
+	content += "<table style=\"border-collapse: separate; border-spacing: 8px;\"><tr><td>Target</td><td>"+target_name+"</td></tr>";
+	content += "<tr><td>Difficulty</td><td>"+target_difficulty+"</td></tr>";
+	content += "<tr><td>Method</td><td>"+method_name+"</td></tr>";
+	content += "<tr><td>Refinement</td><td>"+refinement_name+"</td></tr>";
+	content += "<tr><td>I-RMSD</td><td>"+i_rmsd+"</td></tr>";
+	content += "<tr><td>L-RMSD</td><td>"+l_rmsd+"</td></tr>";
+	content += "<tr><td>R-RMSD</td><td>"+r_rmsd+"</td></tr>";
+	content += "<tr><td>Fnat</td><td>"+fnat+"</td></tr>";
+	content += "<tr><td>I-L-RMSD</td><td>"+i_l_rmsd+"</td></tr>";
+	content += "<tr><td>Target receptor</td><td>"+target_receptor+"</td></tr>";
+	content += "<tr><td>Target ligand</td><td>"+target_ligand+"</td></tr></table>";
+	tooltip.setContent(content);
+	});
+	created_tooltip_list.push(model_id);
+}
+};
 </script>
 
 {% endblock %}
